--- a/recipes/chikuzenni.html
+++ b/recipes/chikuzenni.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes: Fukuoka Cuisine</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes: Fukuoka Cuisine</h1>
-        <a href="recipes/chikuzenni.html">Chikuzen-ni</a>
+    <h1>Chikuzen-ni</h1>
 </body>
 </html>
