Add chikuzenni image and update recipe content
- Linked image in index.html
- Added main image to recipe page
- Listed ingredients and steps
- Added footer link to return to homepage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes: Fukuoka Cuisine</h1>
-        <a href="recipes/chikuzenni.html">Chikuzen-ni</a>
+    <ul>
+        <li>
+            <a href="recipes/chikuzenni.html">Chikuzen-ni</a>
+        <img src="images/chikuzenni.jpg" href="recipes/chikuzenni.html" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
+        </li>
+    </ul>  
 </body>
 </html>
