--- a/recipes/chikuzenni.html
+++ b/recipes/chikuzenni.html
@@ -3,9 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chikuzen-ni</title>
 </head>
 <body>
-    <h1>Chikuzen-ni</h1>
+    <h1>CHIKUZEN-NI</h1>
+    <img src="../images/chikuzenni.jpg" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
+    <article>
+        <section>
+            <h2>Servings</h2>
+            <p>This recipe can make about 4 or 5 servings.<br>
+            Take into account this is not a main dish,<br>
+            but something to be shared together with more food.</p>
+        </section>
+        <section>
+            <h2>What do you need?</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Ingedients</th>
+                        <th>Quantity</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Chiken thigh</td>
+                        <td>250-300g</td>
+                    </tr>
+                    <tr>
+                        <td>Carrots</td>
+                        <td>80g</td>
+                    </tr>
+                    <tr>
+                        <td>Dried shitake mushrooms</td>
+                        <td>10g (3-4 pieces)</td>
+                    </tr>
+                    <tr>
+                        <td>Konnyaku</td>
+                        <td>100g</td>
+                    </tr>
+                    <tr>
+                        <td>Potatoes (or, ideally, taro)</td>
+                        <td>300g</td>
+                    </tr>
+                    <tr>
+                        <td>Bamboo shoots</td>
+                        <td>100g</td>
+                    </tr>
+                    <tr>
+                        <td>Green beans</td>
+                        <td>20g</td>
+                    </tr>
+                    <tr>
+                        <td>Dashi soup stock</td>
+                        <td>200ml (2 cups approx.)</td>
+                    </tr>
+                    <tr>
+                        <td>Soy sauce</td>
+                        <td>25-30ml</td>
+                    </tr>
+                    <tr>
+                        <td>Salt</td>
+                        <td>4-5g</td>
+                    </tr>
+                    <tr>
+                        <td>Mirin</td>
+                        <td>30ml</td>
+                    </tr>
+                    <tr>
+                        <td>Sugar</td>
+                        <td>20-30g</td>
+                    </tr>
+                    <tr>
+                        <td>Oil</td>
+                        <td>1 to 2 tbsp</td>
+                    </tr>
+                    <tr>
+                        <td>Grated ginger</td>
+                        <td>15g</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <h2>How to prepare it?</h2>
+            <ol>
+                <li type="A">Getting the ingredients ready</li>
+                <ol>
+                    <li>Cut chicken and konnyaku into bite-sized pieces.</li>
+                    <li>Cut potatoes, carrots and bamboo shoots into small chunks.</li>
+                    <li>Cut konnyaku into reins.</li>
+                    <li>Rehydrate the mushrooms and cut them in half</li>
+                    <li>Prepare the seasoning by mixing together soy sauce, mirin, salt and sugar.</li>
+                    <li>Boil the green beans in salted water and cut into pieces of 4-5cm.</li>
+                </ol><br>
+                <li type="A">Let's cook!</li>
+                <ol>
+                    <li>Heat the oil in a pan and lightly stir-fry the chicken.</li>
+                    <li>Add 2-3 mushroom pieces and stir-fry a bit more.</li>
+                    <li>Add the dashi stock and the seasoning. Let it simmer until everything is cooked through and the broth evaporates.</li>
+                </ol>
+                <li type="A">Ready to eat!</li><br>
+                <ol>
+                    <li>Remove from the heat, cover and let it cool.</li>
+                    <li>Serve  in a bowl and garnish on top with the ginger and green beans.</li>
+                    <li>Enjoy!</li>
+                </ol>
+            </ol>
+        </section>
+    </article>
+    <footer>
+        <a href="../index.html">Home</a>
+    </footer>
 </body>
 </html>
