Add kashiwameshi image and recipe content
    - Added kashiwameshi recipe to index.html
    - Added main image with link to index
    - Listed ingredients and steps
    - Fixed spelling in chikuzenni recipe

--- a/recipes/chikuzenni.html
+++ b/recipes/chikuzenni.html
@@ -20,13 +20,13 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Ingedients</th>
+                        <th>Ingredients</th>
                         <th>Quantity</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Chiken thigh</td>
+                        <td>Chicken thigh</td>
                         <td>250-300g</td>
                     </tr>
                     <tr>
@@ -34,11 +34,11 @@
                         <td>80g</td>
                     </tr>
                     <tr>
-                        <td>Dried shitake mushrooms</td>
+                        <td>Dried shiitake mushrooms</td>
                         <td>10g (3-4 pieces)</td>
                     </tr>
                     <tr>
-                        <td>Konnyaku</td>
+                        <td>Konjac</td>
                         <td>100g</td>
                     </tr>
                     <tr>
@@ -46,7 +46,7 @@
                         <td>300g</td>
                     </tr>
                     <tr>
-                        <td>Bamboo shoots</td>
+                        <td>Burdock root</td>
                         <td>100g</td>
                     </tr>
                     <tr>
@@ -89,10 +89,10 @@
             <ol>
                 <li type="A">Getting the ingredients ready</li>
                 <ol>
-                    <li>Cut chicken and konnyaku into bite-sized pieces.</li>
-                    <li>Cut potatoes, carrots and bamboo shoots into small chunks.</li>
-                    <li>Cut konnyaku into reins.</li>
-                    <li>Rehydrate the mushrooms and cut them in half</li>
+                    <li>Cut chicken and konjac into bite-sized pieces.</li>
+                    <li>Cut potatoes, carrots and burdock roots into small chunks.</li>
+                    <li>Cut konjac into reins.</li>
+                    <li>Rehydrate the mushrooms and cut them in half.</li>
                     <li>Prepare the seasoning by mixing together soy sauce, mirin, salt and sugar.</li>
                     <li>Boil the green beans in salted water and cut into pieces of 4-5cm.</li>
                 </ol><br>
@@ -105,7 +105,7 @@
                 <li type="A">Ready to eat!</li><br>
                 <ol>
                     <li>Remove from the heat, cover and let it cool.</li>
-                    <li>Serve  in a bowl and garnish on top with the ginger and green beans.</li>
+                    <li>Serve in a bowl and garnish on top with the ginger and green beans.</li>
                     <li>Enjoy!</li>
                 </ol>
             </ol>
