--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <ul>
         <li>
             <a href="recipes/chikuzenni.html">Chikuzen-ni</a>
-        <img src="images/chikuzenni.jpg" href="recipes/chikuzenni.html" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
+            <img src="images/chikuzenni.jpg" href="recipes/chikuzenni.html" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
+        </li><br>
+        <li>
+            <a href="recipes/kashiwameshi.html">Kashiwa-meshi</a>
+            <img src="images/kashiwameshi.jpg" href="recipes/kashiwameshi.html" alt="a close-up of the meal showing pieces of rice, carrots, chicken, mushrooms and burdock">
         </li>
     </ul>  
 </body>
