--- a/recipes/kashiwameshi.html
+++ b/recipes/kashiwameshi.html
@@ -47,30 +47,26 @@
                     </tr>
                     <tr>
                         <td>Sesame oil</td>
-                        <td>15 ml</td>
+                        <td>5 ml</td>
                     </tr>
                     <tr>
                         <td>Soy sauce</td>
-                        <td>60ml</td>
+                        <td>20ml</td>
                     </tr>
                     <tr>
                         <td>Sake</td>
-                        <td>60ml</td>
+                        <td>20ml</td>
                     </tr>
                     <tr>
                         <td>Mirin</td>
-                        <td>60ml</td>
+                        <td>20ml</td>
                     </tr>
                     <tr>
                         <td>Sugar</td>
-                        <td>40g</td>
+                        <td>20g</td>
                     </tr>
                     <tr>
-                        <td>Oil</td>
-                        <td>1 to 2 tbsp</td>
-                    </tr>
-                    <tr>
-                        <td>Spring onion</td>
+                        <td>Scallions</td>
                         <td>12g</td>
                     </tr>
                 </tbody>
@@ -96,7 +92,7 @@
                 <li type="A">Ready to eat!</li><br>
                 <ol>
                     <li>Remove the rice from the heat and mix well with the ingredients and soup.</li>
-                    <li>Garnish with some spring onion shoots.</li>
+                    <li>Garnish with some scallions.</li>
                     <li>Enjoy!</li>
                 </ol>
             </ol>
