--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <h1>Odin Recipes: Fukuoka Cuisine</h1>
     <ul>
         <li>
-            <a href="recipes/chikuzenni.html">Chikuzen-ni</a>
-            <img src="images/chikuzenni.jpg" href="recipes/chikuzenni.html" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
+            <a href="recipes/chikuzenni.html">Chikuzen-ni</a><br>
+            <img src="images/chikuzenni.jpg" height="310" width="400" href="recipes/chikuzenni.html" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
         </li><br>
         <li>
-            <a href="recipes/kashiwameshi.html">Kashiwa-meshi</a>
-            <img src="images/kashiwameshi.jpg" href="recipes/kashiwameshi.html" alt="a close-up of the meal showing pieces of rice, carrots, chicken, mushrooms and burdock">
+            <a href="recipes/kashiwameshi.html">Kashiwa-meshi</a><br>
+            <img src="images/kashiwameshi.jpg" height="310" width="400" href="recipes/kashiwameshi.html" alt="a close-up of the meal showing pieces of rice, carrots, chicken, mushrooms and burdock">
         </li><br>
         <li>
-            <a href="recipes/tonkotsuramen.html">Tonkotsu ramen</a>
-            <img src="images/tonkotsuramen.jpg" href="recipes/tonkotsuramen.html" alt="a close-up of a ramen bowl with the noodles, braised pork, soft-boiled egg, sesame garnish, scallions and ear mushrooms">
+            <a href="recipes/tonkotsuramen.html">Tonkotsu ramen</a><br>
+            <img src="images/tonkotsuramen.jpg" height="310" width="310" href="recipes/tonkotsuramen.html" alt="a close-up of a ramen bowl with the noodles, braised pork, soft-boiled egg, sesame garnish, scallions and ear mushrooms">
         </li>
     </ul>  
 </body>
