Fix images link in index.html

--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
     <ul>
         <li>
             <a href="recipes/chikuzenni.html">Chikuzen-ni</a><br>
-            <img src="images/chikuzenni.jpg" height="310" width="400" href="recipes/chikuzenni.html" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
+            <a href="ecipes/chikuzenni.html">
+                <img src="images/chikuzenni.jpg" height="310" width="400" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
+            </a>
         </li><br>
         <li>
             <a href="recipes/kashiwameshi.html">Kashiwa-meshi</a><br>
-            <img src="images/kashiwameshi.jpg" height="310" width="400" href="recipes/kashiwameshi.html" alt="a close-up of the meal showing pieces of rice, carrots, chicken, mushrooms and burdock">
+            <a href="recipes/kashiwameshi.html">
+                <img src="images/kashiwameshi.jpg" height="310" width="400" alt="a close-up of the meal showing pieces of rice, carrots, chicken, mushrooms and burdock">
+            </li>a>
         </li><br>
         <li>
             <a href="recipes/tonkotsuramen.html">Tonkotsu ramen</a><br>
-            <img src="images/tonkotsuramen.jpg" height="310" width="310" href="recipes/tonkotsuramen.html" alt="a close-up of a ramen bowl with the noodles, braised pork, soft-boiled egg, sesame garnish, scallions and ear mushrooms">
-        </li>
+            <a href="recipes/tonkotsuramen.html">
+                <img src="images/tonkotsuramen.jpg" height="310" width="310" alt="a close-up of a ramen bowl with the noodles, braised pork, soft-boiled egg, sesame garnish, scallions and ear mushrooms">
+            </a>
+            </li>
     </ul>  
 </body>
 </html>
