Fix broken image hyperlink in index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
             <a href="recipes/chikuzenni.html">Chikuzen-ni</a><br>
-            <a href="ecipes/chikuzenni.html">
+            <a href="recipes/chikuzenni.html">
                 <img src="images/chikuzenni.jpg" height="310" width="400" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
             </a>
         </li><br>
