Fix sapcing in recipes

--- a/recipes/chikuzenni.html
+++ b/recipes/chikuzenni.html
@@ -101,8 +101,8 @@
                     <li>Heat the oil in a pan and lightly stir-fry the chicken.</li>
                     <li>Add 2-3 mushroom pieces and stir-fry a bit more.</li>
                     <li>Add the dashi stock and the seasoning. Let it simmer until everything is cooked through and the broth evaporates.</li>
-                </ol>
-                <li type="A">Ready to eat!</li><br>
+                </ol><br>
+                <li type="A">Ready to eat!</li>
                 <ol>
                     <li>Remove from the heat, cover and let it cool.</li>
                     <li>Serve in a bowl and garnish on top with the ginger and green beans.</li>
