--- a/recipes/kashiwameshi.html
+++ b/recipes/kashiwameshi.html
@@ -88,8 +88,8 @@
                     <li>when they are cooked add the seasonings, mix well and saute on medium heat.</li>
                     <li>When the liquid is reduced by half, turn off the heat and let it cool.</li>
                     <li>Cook the rice in another pot with some dashi.</li>
-                </ol>
-                <li type="A">Ready to eat!</li><br>
+                </ol><br>
+                <li type="A">Ready to eat!</li>
                 <ol>
                     <li>Remove the rice from the heat and mix well with the ingredients and soup.</li>
                     <li>Garnish with some scallions.</li>
