--- a/recipes/tonkotsuramen.html
+++ b/recipes/tonkotsuramen.html
@@ -89,8 +89,8 @@
                     <li>Boil the noodles in water about 4 minutes. No salt needed.</li>
                     <li>Cook the mushrooms along side the noodles until they are soften.</li>
                     <li>Slightly fry the braised pork in a  on-tick pan until lightly browned.</li>
-                </ol>
-                <li type="A">Ready to eat!</li><br>
+                </ol><br>
+                <li type="A">Ready to eat!</li>
                 <ol>
                     <li>Place 1/4 of the seasoning in the bottom of four bowls.</li>
                     <li>Pour about 125ml of broth into each bowl and stir to mix.</li>
