--- a/recipes/kashiwameshi.html
+++ b/recipes/kashiwameshi.html
@@ -75,26 +75,29 @@
         <section>
             <h2>How to prepare it?</h2>
             <ol>
-                <li type="A">Getting the ingredients ready</li>
-                <ol>
-                    <li>Wash and rinse the rice and let it sit for 30-60min.</li>
-                    <li>Cut the chicken into small pieces.</li>
-                    <li>Cut the carrots and burdock into strips.</li>
-                    <li>Rehydrate the mushrooms and cut them in half.</li>
-                </ol><br>
-                <li type="A">Let's cook!</li>
-                <ol>
-                    <li>Heat a pan on medium heat, add sesame oil and lightly stir-fry all the cut ingredients.</li>
-                    <li>when they are cooked add the seasonings, mix well and saute on medium heat.</li>
-                    <li>When the liquid is reduced by half, turn off the heat and let it cool.</li>
-                    <li>Cook the rice in another pot with some dashi.</li>
-                </ol><br>
-                <li type="A">Ready to eat!</li>
-                <ol>
-                    <li>Remove the rice from the heat and mix well with the ingredients and soup.</li>
-                    <li>Garnish with some scallions.</li>
-                    <li>Enjoy!</li>
-                </ol>
+                <li type="A">Getting the ingredients ready
+                    <ol>
+                        <li>Wash and rinse the rice and let it sit for 30-60min.</li>
+                        <li>Cut the chicken into small pieces.</li>
+                        <li>Cut the carrots and burdock into strips.</li>
+                        <li>Rehydrate the mushrooms and cut them in half.</li>
+                    </ol><br>
+                </li>
+                <li type="A">Let's cook!
+                    <ol>
+                        <li>Heat a pan on medium heat, add sesame oil and lightly stir-fry all the cut ingredients.</li>
+                        <li>when they are cooked add the seasonings, mix well and saute on medium heat.</li>
+                        <li>When the liquid is reduced by half, turn off the heat and let it cool.</li>
+                     <li>Cook the rice in another pot with some dashi.</li>
+                    </ol><br>
+                </li>
+                <li type="A">Ready to eat!
+                    <ol>
+                        <li>Remove the rice from the heat and mix well with the ingredients and soup.</li>
+                        <li>Garnish with some scallions.</li>
+                        <li>Enjoy!</li>
+                    </ol><br>
+                </li>
             </ol>
         </section>
     </article>
