Fix  list structure; delete extra closing link         - Wrapped nested ol tags inside li elements         - Moved <br> into correct positions         - Removed a mistakenly placed homepage link

--- a/recipes/kashiwameshi.html
+++ b/recipes/kashiwameshi.html
@@ -74,8 +74,8 @@
         </section>
         <section>
             <h2>How to prepare it?</h2>
-            <ol>
-                <li type="A">Getting the ingredients ready
+            <ol type="A">
+                <li>Getting the ingredients ready
                     <ol>
                         <li>Wash and rinse the rice and let it sit for 30-60min.</li>
                         <li>Cut the chicken into small pieces.</li>
@@ -83,7 +83,7 @@
                         <li>Rehydrate the mushrooms and cut them in half.</li>
                     </ol><br>
                 </li>
-                <li type="A">Let's cook!
+                <li>Let's cook!
                     <ol>
                         <li>Heat a pan on medium heat, add sesame oil and lightly stir-fry all the cut ingredients.</li>
                         <li>when they are cooked add the seasonings, mix well and saute on medium heat.</li>
@@ -91,7 +91,7 @@
                      <li>Cook the rice in another pot with some dashi.</li>
                     </ol><br>
                 </li>
-                <li type="A">Ready to eat!
+                <li>Ready to eat!
                     <ol>
                         <li>Remove the rice from the heat and mix well with the ingredients and soup.</li>
                         <li>Garnish with some scallions.</li>
