--- a/recipes/tonkotsuramen.html
+++ b/recipes/tonkotsuramen.html
@@ -78,19 +78,21 @@
         </section>
         <section>
             <h2>How to prepare it?</h2>
-            <ol>
-                <li type="A">Getting the seasoning ready</li>
+            <ol type="A">
+                <li>Getting the seasoning ready
                     <ol>
                         <li>Peel the garlic cloves and crush with the flat part of a knife.</li>
                         <li>Place the garlic, soy sauce, mirin and sake in a small sauce pan. bring to a boil and then reduce and simmer for 10 minutes.</li>
                     </ol><br>
-                <li type="A">Let's cook!</li>
+                </li>
+                <li>Let's cook!
                     <ol>
                         <li>Boil the noodles in water about 4 minutes. No salt needed.</li>
                         <li>Cook the mushrooms along side the noodles until they are soften.</li>
                         <li>Slightly fry the braised pork in a  on-tick pan until lightly browned.</li>
                     </ol><br>
-                <li type="A">Ready to eat!</li>
+                </li>
+                <li>Ready to eat!
                     <ol>
                         <li>Place 1/4 of the seasoning in the bottom of four bowls.</li>
                         <li>Pour about 125ml of broth into each bowl and stir to mix.</li>
@@ -99,6 +101,7 @@
                         <li>Additionally, garnish with sesame seeds and scallions.</li>
                         <li>Enjoy!</li>
                     </ol>
+                </li>
             </ol>
         </section>
     </article>
