--- a/recipes/chikuzenni.html
+++ b/recipes/chikuzenni.html
@@ -86,8 +86,8 @@
         </section>
         <section>
             <h2>How to prepare it?</h2>
-            <ol>
-                <li type="A">Getting the ingredients ready</li>
+            <ol type="A">
+                <li>Getting the ingredients ready
                     <ol>
                         <li>Cut chicken and konjac into bite-sized pieces.</li>
                         <li>Cut potatoes, carrots and burdock roots into small chunks.</li>
@@ -96,18 +96,21 @@
                         <li>Prepare the seasoning by mixing together soy sauce, mirin, salt and sugar.</li>
                         <li>Boil the green beans in salted water and cut into pieces of 4-5cm.</li>
                     </ol><br>
-                <li type="A">Let's cook!</li>
+                </li>
+                <li>Let's cook!
                     <ol>
                         <li>Heat the oil in a pan and lightly stir-fry the chicken.</li>
                         <li>Add 2-3 mushroom pieces and stir-fry a bit more.</li>
                         <li>Add the dashi stock and the seasoning. Let it simmer until everything is cooked through and the broth evaporates.</li>
                  </ol><br>
-                <li type="A">Ready to eat!</li>
+                </li>
+                <li>Ready to eat!
                     <ol>
                         <li>Remove from the heat, cover and let it cool.</li>
                         <li>Serve in a bowl and garnish on top with the ginger and green beans.</li>
                         <li>Enjoy!</li>
                     </ol>
+                </li>
             </ol>
         </section>
     </article>
