Move <br> into correct positions in homepage

--- a/recipes/tonkotsuramen.html
+++ b/recipes/tonkotsuramen.html
@@ -43,7 +43,7 @@
                     </tr>
                     <tr>
                         <td>Chashu braised pork</td>
-                        <td>12 slices (25g each approx.))</td>
+                        <td>12 slices (25g each approx.)</td>
                     </tr>
                     <tr>
                         <td>Garlic</td>
