Set up custom fonts and base styling.     - Added custom fonts and @font-face rules.     - Replaced incorrect link to style.css     - Included box-sizing, margin, padding reset     - Added initial styles for body, h1, and ul

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <li>
             <a href="recipes/chikuzenni.html">Chikuzen-ni</a><br>
             <a href="recipes/chikuzenni.html">
-                <img src="images/chikuzenni.jpg" height="310" width="400" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
+                <img src="images/chikuzenni.jpg" class="responsive" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
             </a><br>
         </li>
         <li>
             <a href="recipes/kashiwameshi.html">Kashiwa-meshi</a><br>
             <a href="recipes/kashiwameshi.html">
-                <img src="images/kashiwameshi.jpg" height="310" width="400" alt="a close-up of the meal showing pieces of rice, carrots, chicken, mushrooms and burdock">
+                <img src="images/kashiwameshi.jpg" class="responsive" alt="a close-up of the meal showing pieces of rice, carrots, chicken, mushrooms and burdock">
             </a><br>
         </li>
         <li>
             <a href="recipes/tonkotsuramen.html">Tonkotsu ramen</a><br>
             <a href="recipes/tonkotsuramen.html">
-                <img src="images/tonkotsuramen.jpg" height="310" width="310" alt="a close-up of a ramen bowl with the noodles, braised pork, soft-boiled egg, sesame garnish, scallions and ear mushrooms">
+                <img src="images/tonkotsuramen.jpg" class="responsive" alt="a close-up of a ramen bowl with the noodles, braised pork, soft-boiled egg, sesame garnish, scallions and ear mushrooms">
             </a>
             </li>
     </ul>  
