--- a/index.html
+++ b/index.html
@@ -7,26 +7,33 @@
     <title>Odin Recipes: Fukuoka Cuisine</title>
 </head>
 <body>
-    <h1>Odin Recipes: Fukuoka Cuisine</h1>
-    <ul>
-        <li>
-            <a href="recipes/chikuzenni.html">Chikuzen-ni</a><br>
-            <a href="recipes/chikuzenni.html">
-                <img src="images/chikuzenni.jpg" class="responsive" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
-            </a><br>
-        </li>
-        <li>
-            <a href="recipes/kashiwameshi.html">Kashiwa-meshi</a><br>
-            <a href="recipes/kashiwameshi.html">
-                <img src="images/kashiwameshi.jpg" class="responsive" alt="a close-up of the meal showing pieces of rice, carrots, chicken, mushrooms and burdock">
-            </a><br>
-        </li>
-        <li>
-            <a href="recipes/tonkotsuramen.html">Tonkotsu ramen</a><br>
-            <a href="recipes/tonkotsuramen.html">
-                <img src="images/tonkotsuramen.jpg" class="responsive" alt="a close-up of a ramen bowl with the noodles, braised pork, soft-boiled egg, sesame garnish, scallions and ear mushrooms">
-            </a>
+    <header>
+        <h1>Odin Recipes: Fukuoka Cuisine</h1>
+    </header>
+    <main>
+        <ul class="recipelist">
+            <li>
+                <a href="recipes/chikuzenni.html" class="recipename">Chikuzen-ni</a><br>
+                <a href="recipes/chikuzenni.html">
+                    <img src="images/chikuzenni.jpg" class="responsiveimage" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
+                </a>
             </li>
-    </ul>  
+            <li>
+                <a href="recipes/kashiwameshi.html" class="recipename">Kashiwa-meshi</a><br>
+                <a href="recipes/kashiwameshi.html">
+                    <img src="images/kashiwameshi.jpg" class="responsiveimage" alt="a close-up of the meal showing pieces of rice, carrots, chicken, mushrooms and burdock">
+                </a>
+            </li>
+            <li>
+                <a href="recipes/tonkotsuramen.html" class="recipename">Tonkotsu ramen</a><br>
+                <a href="recipes/tonkotsuramen.html">
+                    <img src="images/tonkotsuramen.jpg" class="responsiveimage" alt="a close-up of a ramen bowl with the noodles, braised pork, soft-boiled egg, sesame garnish, scallions and ear mushrooms">
+                </a>
+            </li>
+        </ul>  
+    </main>
+    <footer>
+        <img src="images/fukuokabackground.jpeg" class="responsivefooter" alt="illustration of famous buildings and traditional foods from Fukuoka">
+    </footer>
 </body>
 </html>
