Refactor HTML, apply CSS to index and Chikuzen-ni     - Cleaned and reorganized HTML structure     - Finished recipes.css, applied to Chikuzen-ni     - Minor style improvements in CSS for index     - Added new images: yatai.jpeg and yatai2.jpeg     - Touched up kashiwameshi.html for styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Odin Recipes: Fukuoka Cuisine</h1>
-    </header>
+     </header>
     <main>
         <ul class="recipelist">
             <li>
@@ -25,7 +25,7 @@
                 </a>
             </li>
             <li>
-                <a href="recipes/tonkotsuramen.html" class="recipename">Tonkotsu ramen</a><br>
+                <a href="recipes/tonkotsuramen.html" class="recipename">Tonkotsu Ramen</a><br>
                 <a href="recipes/tonkotsuramen.html">
                     <img src="images/tonkotsuramen.jpg" class="responsiveimage" alt="a close-up of a ramen bowl with the noodles, braised pork, soft-boiled egg, sesame garnish, scallions and ear mushrooms">
                 </a>
@@ -33,7 +33,7 @@
         </ul>  
     </main>
     <footer>
-        <img src="images/fukuokabackground.jpeg" class="responsivefooter" alt="illustration of famous buildings and traditional foods from Fukuoka">
+        <img src="images/fukuokabackground.jpeg" class="responsivefooter">
     </footer>
 </body>
 </html>
