--- a/recipes/kashiwameshi.html
+++ b/recipes/kashiwameshi.html
@@ -75,7 +75,7 @@
         <section>
             <h2>How to prepare it?</h2>
             <ol type="A">
-                <li>Getting the ingredients ready
+                <li>Getting the ingredients ready!
                     <ol>
                         <li>Wash and rinse the rice and let it sit for 30-60min.</li>
                         <li>Cut the chicken into small pieces.</li>
