--- a/recipes/chikuzenni.html
+++ b/recipes/chikuzenni.html
@@ -3,119 +3,131 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style/recipes.css">
     <title>Chikuzen-ni</title>
 </head>
 <body>
-    <h1>CHIKUZEN-NI</h1>
-    <img src="../images/chikuzenni.jpg" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
-    <article>
-        <section>
-            <h2>Servings</h2>
-            <p>This recipe can make about 4 or 5 servings.<br>
-            Take into account this is not a main dish,<br>
-            but something to be shared together with more food.</p>
-        </section>
-        <section>
-            <h2>What do you need?</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Ingredients</th>
-                        <th>Quantity</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Chicken thigh</td>
-                        <td>250-300g</td>
-                    </tr>
-                    <tr>
-                        <td>Carrots</td>
-                        <td>80g</td>
-                    </tr>
-                    <tr>
-                        <td>Dried shiitake mushrooms</td>
-                        <td>10g (3-4 pieces)</td>
-                    </tr>
-                    <tr>
-                        <td>Konjac</td>
-                        <td>100g</td>
-                    </tr>
-                    <tr>
-                        <td>Potatoes (or, ideally, taro)</td>
-                        <td>300g</td>
-                    </tr>
-                    <tr>
-                        <td>Burdock root</td>
-                        <td>100g</td>
-                    </tr>
-                    <tr>
-                        <td>Green beans</td>
-                        <td>20g</td>
-                    </tr>
-                    <tr>
-                        <td>Dashi soup stock</td>
-                        <td>200ml (2 cups approx.)</td>
-                    </tr>
-                    <tr>
-                        <td>Soy sauce</td>
-                        <td>25-30ml</td>
-                    </tr>
-                    <tr>
-                        <td>Salt</td>
-                        <td>4-5g</td>
-                    </tr>
-                    <tr>
-                        <td>Mirin</td>
-                        <td>30ml</td>
-                    </tr>
-                    <tr>
-                        <td>Sugar</td>
-                        <td>20-30g</td>
-                    </tr>
-                    <tr>
-                        <td>Oil</td>
-                        <td>1 to 2 tbsp</td>
-                    </tr>
-                    <tr>
-                        <td>Grated ginger</td>
-                        <td>15g</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-        <section>
-            <h2>How to prepare it?</h2>
-            <ol type="A">
-                <li>Getting the ingredients ready
-                    <ol>
-                        <li>Cut chicken and konjac into bite-sized pieces.</li>
-                        <li>Cut potatoes, carrots and burdock roots into small chunks.</li>
-                        <li>Cut konjac into reins.</li>
-                        <li>Rehydrate the mushrooms and cut them in half.</li>
-                        <li>Prepare the seasoning by mixing together soy sauce, mirin, salt and sugar.</li>
-                        <li>Boil the green beans in salted water and cut into pieces of 4-5cm.</li>
-                    </ol><br>
-                </li>
-                <li>Let's cook!
-                    <ol>
-                        <li>Heat the oil in a pan and lightly stir-fry the chicken.</li>
-                        <li>Add 2-3 mushroom pieces and stir-fry a bit more.</li>
-                        <li>Add the dashi stock and the seasoning. Let it simmer until everything is cooked through and the broth evaporates.</li>
-                 </ol><br>
-                </li>
-                <li>Ready to eat!
-                    <ol>
-                        <li>Remove from the heat, cover and let it cool.</li>
-                        <li>Serve in a bowl and garnish on top with the ginger and green beans.</li>
-                        <li>Enjoy!</li>
+    <div class="background">
+        <header>
+            <h1>CHIKUZEN-NI</h1>
+        </header>
+        <main>
+            <img src="../images/chikuzenni.jpg" class="responsiveimage" alt="a close-up of the meal showing pieces of green beans, carrots, chicken, mushrooms, potatoes and bamboo shoots">
+            <article>
+                <section class="servingsection">
+                    <h2>Servings</h2>
+                    <p>This recipe can make about 4 or 5 servings. Take into account this is not a main dish, but something to be shared together with more food.</p>
+                </section>
+                <section class="ingredientsection">
+                    <h2>What do you need?</h2>
+                    <div class="ingredientslist">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Ingredients</th>
+                                    <th>Quantity</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Chicken thigh</td>
+                                    <td>250-300g</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Carrots</td>
+                                    <td>80g</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Dried shiitake mushrooms</td>
+                                    <td >10g (3-4 pieces)</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Konjac</td>
+                                    <td>100g</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Potatoes (or, ideally, taro)</td>
+                                    <td>300g</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Burdock root</td>
+                                    <td>100g</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Green beans</td>
+                                    <td>20g</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Dashi soup stock</td>
+                                    <td>200ml (2 cups approx.)</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Soy sauce</td>
+                                    <td>25-30ml</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Salt</td>
+                                    <td>4-5g</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Mirin</td>
+                                    <td>30ml</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Sugar</td>
+                                    <td>20-30g</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Oil</td>
+                                    <td>1 to 2 tbsp</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Grated ginger</td>
+                                    <td>15g</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </section>
+                <section class="recipestepsection">
+                    <h2>How to cook it?</h2>
+                    <ol class="cooking-instructions-list">
+                        <li class="cooking-instructions-title">
+                            <span class="steptitle">Get those ingredients ready!</span>
+                            <ol>
+                                <li class="cookingstep">Cut chicken and konjac into bite-sized pieces.</li>
+                                <li class="cookingstep">Cut potatoes, carrots and burdock roots into small chunks.</li>
+                                <li class="cookingstep">Cut konjac into reins.</li>
+                                <li class="cookingstep">Rehydrate the mushrooms and cut them in half.</li>
+                                <li class="cookingstep">Prepare the seasoning by mixing together soy sauce, mirin, salt and sugar.</li>
+                                <li class="cookingstep">Boil the green beans in salted water and cut into pieces of 4-5cm.</li>
+                            </ol>
+                        </li>
+                        <li class="cooking-instructions-title">
+                            <span class="steptitle">Let's cook!</span>
+                            <ol>
+                                <li class="cookingstep">Heat the oil in a pan and lightly stir-fry the chicken.</li>
+                                <li class="cookingstep">Add 2-3 mushroom pieces and stir-fry a bit more.</li>
+                                <li class="cookingstep">Add the dashi stock and the seasoning. Let it simmer until everything is cooked through and the broth evaporates.</li>
+                            </ol>
+                        </li>
+                        <li class="cooking-instructions-title">
+                            <span class="steptitle">Ready to eat!</span>
+                            <ol>
+                                <li class="cookingstep">Remove from the heat, cover and let it cool.</li>
+                                <li class="cookingstep">Serve in a bowl and garnish on top with the ginger and green beans.</li>
+                                <li class="cookingstep">Enjoy!</li>
+                            </ol>
+                        </li>
                     </ol>
-                </li>
-            </ol>
-        </section>
-    </article>
-    <footer>
-        <a href="../index.html">Home</a>
-    </footer>
+                </section>
+            </article>
+        </main>
+        <footer>
+            <a href="../index.html">HOME</a>
+            <a href="./kashiwameshi.html">Kashiwa-meshi</a>
+            <a href="./tonkotsuramen.html">Tonkotsu Ramen</a>
+        </footer>
+    </div>
 </body>
 </html>
