--- a/recipes/kashiwameshi.html
+++ b/recipes/kashiwameshi.html
@@ -3,106 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style/recipes.css">
     <title>Kashiwa-meshi</title>
 </head>
 <body>
-    <h1>KASHIWA-MESHI</h1>
-    <img src="../images/kashiwameshi.jpg" alt="a close-up of the meal showing pieces of rice, carrots, chicken, mushrooms and burdock">
-    <article>
-        <section>
-            <h2>Servings</h2>
-            <p>This recipe can make about 4 servings.<br>
-            Take into account this is not a main dish,<br>
-            but side dish to eat with a main one.</p>
-        </section>
-        <section>
-            <h2>What do you need?</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Ingredients</th>
-                        <th>Quantity</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Rice</td>
-                        <td>255g</td>
-                    </tr>
-                    <tr>
-                        <td>Chicken breast</td>
-                        <td>120g</td>
-                    </tr>
-                    <tr>
-                        <td>Burdock root</td>
-                        <td>60g</td>
-                    </tr>
-                    <tr>
-                        <td>Carrots</td>
-                        <td>60g</td>
-                    </tr>
-                    <tr>
-                        <td>Dried shiitake mushrooms</td>
-                        <td>4 small mushrooms</td>
-                    </tr>
-                    <tr>
-                        <td>Sesame oil</td>
-                        <td>5 ml</td>
-                    </tr>
-                    <tr>
-                        <td>Soy sauce</td>
-                        <td>20ml</td>
-                    </tr>
-                    <tr>
-                        <td>Sake</td>
-                        <td>20ml</td>
-                    </tr>
-                    <tr>
-                        <td>Mirin</td>
-                        <td>20ml</td>
-                    </tr>
-                    <tr>
-                        <td>Sugar</td>
-                        <td>20g</td>
-                    </tr>
-                    <tr>
-                        <td>Scallions</td>
-                        <td>12g</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-        <section>
-            <h2>How to prepare it?</h2>
-            <ol type="A">
-                <li>Getting the ingredients ready!
+    <div class="background">
+        <header>
+            <h1>KASHIWA-MESHI</h1>
+        </header>
+        <main>  
+            <img src="../images/kashiwameshi.jpg" class="responsiveimage" alt="a close-up of the meal showing pieces of rice, carrots, chicken, mushrooms and burdock">
+            <article>
+                <section class="servingsection">
+                    <h2>Servings</h2>
+                    <p>This recipe can make about 4 servings. Take into account this is not a main dish, but side dish to eat with a main one.</p>
+                </section>
+                <section class="servingsection">
+                    <h2>What do you need?</h2>
+                    <div class="ingredientslist">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Ingredients</th>
+                                    <th>Quantity</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Rice</td>
+                                    <td>255g</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Chicken breast</td>
+                                    <td>120g</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Burdock root</td>
+                                    <td>60g</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Carrots</td>
+                                    <td>60g</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Dried shiitake mushrooms</td>
+                                    <td>4 small mushrooms</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Sesame oil</td>
+                                    <td>5 ml</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Soy sauce</td>
+                                    <td>20ml</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Sake</td>
+                                    <td>20ml</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Mirin</td>
+                                    <td>20ml</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Sugar</td>
+                                    <td>20g</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Scallions</td>
+                                    <td>12g</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </section>
+                <section class="recipestepsection">
+                    <h2>How to prepare it?</h2>
                     <ol>
-                        <li>Wash and rinse the rice and let it sit for 30-60min.</li>
-                        <li>Cut the chicken into small pieces.</li>
-                        <li>Cut the carrots and burdock into strips.</li>
-                        <li>Rehydrate the mushrooms and cut them in half.</li>
-                    </ol><br>
-                </li>
-                <li>Let's cook!
-                    <ol>
-                        <li>Heat a pan on medium heat, add sesame oil and lightly stir-fry all the cut ingredients.</li>
-                        <li>when they are cooked add the seasonings, mix well and saute on medium heat.</li>
-                        <li>When the liquid is reduced by half, turn off the heat and let it cool.</li>
-                     <li>Cook the rice in another pot with some dashi.</li>
-                    </ol><br>
-                </li>
-                <li>Ready to eat!
-                    <ol>
-                        <li>Remove the rice from the heat and mix well with the ingredients and soup.</li>
-                        <li>Garnish with some scallions.</li>
-                        <li>Enjoy!</li>
-                    </ol><br>
-                </li>
-            </ol>
-        </section>
-    </article>
-    <footer>
-        <a href="../index.html">Home</a>
-    </footer>
+                        <li class="cooking-instructions-title">
+                            <span class="steptitle">Get those ingredients ready!</span>
+                            <ol>
+                                <li class="cookingstep">Wash and rinse the rice and let it sit for 30-60min.</li>
+                                <li class="cookingstep">Cut the chicken into small pieces.</li>
+                                <li class="cookingstep">Cut the carrots and burdock into strips.</li>
+                                <li class="cookingstep">Rehydrate the mushrooms and cut them in half.</li>
+                            </ol>
+                        </li>
+                        <li class="cooking-instructions-title">
+                            <span class="steptitle">Let's cook!</span>
+                            <ol>
+                                <li class="cookingstep">Heat a pan on medium heat, add sesame oil and lightly stir-fry all the cut ingredients.</li>
+                                <li class="cookingstep">when they are cooked add the seasonings, mix well and saute on medium heat.</li>
+                                <li class="cookingstep">When the liquid is reduced by half, turn off the heat and let it cool.</li>
+                            <li>Cook the rice in another pot with some dashi.</li>
+                            </ol>
+                        </li>
+                        <li class="cooking-instructions-title">
+                            <span class="steptitle">Ready to eat!</span>
+                            <ol>
+                                <li class="cookingstep">Remove the rice from the heat and mix well with the ingredients and soup.</li>
+                                <li class="cookingstep">Garnish with some scallions.</li>
+                                <li class="cookingstep">Enjoy!</li>
+                            </ol>
+                        </li>
+                    </ol>
+                </section>
+            </article>
+        </main>    
+        <footer>    
+            <a href="../index.html">HOME</a>
+            <a href="./chikuzenni.html">Chikuzen-ni</a>
+            <a href="./tonkotsuramen.html">Tonkotsu Ramen</a>
+        </footer>
+    </div>
 </body>
 </html>
