Clean up images and finalize recipe HTML structure     - Deleted unused yatai2.jpeg image     - Updated tonkotsuramen.html for styling     - Fixed HTML errors in kashiwameshi.html

--- a/recipes/kashiwameshi.html
+++ b/recipes/kashiwameshi.html
@@ -18,7 +18,7 @@
                     <h2>Servings</h2>
                     <p>This recipe can make about 4 servings. Take into account this is not a main dish, but side dish to eat with a main one.</p>
                 </section>
-                <section class="servingsection">
+                <section class="ingredientsection">
                     <h2>What do you need?</h2>
                     <div class="ingredientslist">
                         <table>
@@ -78,8 +78,8 @@
                     </div>
                 </section>
                 <section class="recipestepsection">
-                    <h2>How to prepare it?</h2>
-                    <ol>
+                    <h2>How to cook it?</h2>
+                    <ol class="cooking-instructions-list">
                         <li class="cooking-instructions-title">
                             <span class="steptitle">Get those ingredients ready!</span>
                             <ol>
@@ -95,7 +95,7 @@
                                 <li class="cookingstep">Heat a pan on medium heat, add sesame oil and lightly stir-fry all the cut ingredients.</li>
                                 <li class="cookingstep">when they are cooked add the seasonings, mix well and saute on medium heat.</li>
                                 <li class="cookingstep">When the liquid is reduced by half, turn off the heat and let it cool.</li>
-                            <li>Cook the rice in another pot with some dashi.</li>
+                                <li class="cookingstep">Cook the rice in another pot with some dashi.</li>
                             </ol>
                         </li>
                         <li class="cooking-instructions-title">
