--- a/recipes/tonkotsuramen.html
+++ b/recipes/tonkotsuramen.html
@@ -3,110 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style/recipes.css">
     <title>Tonkotsu ramen</title>
 </head>
 <body>
-    <h1>TONKOTSU RAMEN</h1>
-    <img src="../images/tonkotsuramen.jpg" alt="a close-up of a ramen bowl with the noodles, braised pork, soft-boiled egg, sesame garnish, scallions and ear mushrooms">
-    <article>
-        <section>
-            <h2>Servings</h2>
-            <p>This recipe can make about 4 servings.<br>
-            This is a very filling main dish,<br>
-            but feel free to ea it with some gyoza or kashiwa meshi!</p>
-        </section>
-        <section>
-            <h2>What do you need?</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Ingredients</th>
-                        <th>Quantity</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Pork broth</td>
-                        <td>2l</td>
-                    </tr>
-                    <tr>
-                        <td>Ramen noodles</td>
-                        <td>400g</td>
-                    </tr>
-                    <tr>
-                        <td>Soft-boiled eggs</td>
-                        <td>4 large eggs</td>
-                    </tr>
-                    <tr>
-                        <td>Ear mushrooms</td>
-                        <td>80g</td>
-                    </tr>
-                    <tr>
-                        <td>Chashu braised pork</td>
-                        <td>12 slices (25g each approx.)</td>
-                    </tr>
-                    <tr>
-                        <td>Garlic</td>
-                        <td>6 cloves</td>
-                    </tr>
-                    <tr>
-                        <td>Soy sauce</td>
-                        <td>75ml</td>
-                    </tr>
-                    <tr>
-                        <td>Mirin</td>
-                        <td>30ml</td>
-                    </tr>
-                    <tr>
-                        <td>Sake</td>
-                        <td>30ml</td>
-                    </tr>
-                    <tr>
-                        <td>Scallions</td>
-                        <td>12g</td>
-                    </tr>
-                    <tr>
-                        <td>Toasted sesame seeds</td>
-                        <td>12g</td>
-                    </tr>
-                    <tr>
-                        <td>Red pickled ginger</td>
-                        <td>40g</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
-        <section>
-            <h2>How to prepare it?</h2>
-            <ol type="A">
-                <li>Getting the seasoning ready
-                    <ol>
-                        <li>Peel the garlic cloves and crush with the flat part of a knife.</li>
-                        <li>Place the garlic, soy sauce, mirin and sake in a small sauce pan. bring to a boil and then reduce and simmer for 10 minutes.</li>
-                    </ol><br>
-                </li>
-                <li>Let's cook!
-                    <ol>
-                        <li>Boil the noodles in water about 4 minutes. No salt needed.</li>
-                        <li>Cook the mushrooms along side the noodles until they are soften.</li>
-                        <li>Slightly fry the braised pork in a  on-tick pan until lightly browned.</li>
-                    </ol><br>
-                </li>
-                <li>Ready to eat!
-                    <ol>
-                        <li>Place 1/4 of the seasoning in the bottom of four bowls.</li>
-                        <li>Pour about 125ml of broth into each bowl and stir to mix.</li>
-                        <li>Add the noodles. Pour another 375ml of broth per bowl.</li>
-                        <li>Top each bowl with one egg, about 2-3 braised pork slices, and about 20g of mushrooms.</li>
-                        <li>Additionally, garnish with sesame seeds and scallions.</li>
-                        <li>Enjoy!</li>
+    <div class="background">
+        <header>
+            <h1>TONKOTSU RAMEN</h1>
+        </header>
+        <main>
+            <img src="../images/tonkotsuramen.jpg" class="responsiveimage" alt="a close-up of a ramen bowl with the noodles, braised pork, soft-boiled egg, sesame garnish, scallions and ear mushrooms">
+            <article>
+                <section class="servingsection">
+                    <h2>Servings</h2>
+                    <p>This recipe can make about 4 servings. This is a very filling main dish, but feel free to ea it with some gyoza or kashiwa meshi!</p>
+                </section>
+                <section class="ingredientsection">
+                    <h2>What do you need?</h2>
+                    <div class="ingredientslist">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Ingredients</th>
+                                    <th>Quantity</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Pork broth</td>
+                                    <td>2l</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Ramen noodles</td>
+                                    <td>400g</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Soft-boiled eggs</td>
+                                    <td>4 large eggs</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Ear mushrooms</td>
+                                    <td>80g</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Chashu braised pork</td>
+                                    <td>12 slices (25g each approx.)</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Garlic</td>
+                                    <td>6 cloves</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Soy sauce</td>
+                                    <td>75ml</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Mirin</td>
+                                    <td>30ml</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Sake</td>
+                                    <td>30ml</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Scallions</td>
+                                    <td>12g</td>
+                                </tr>
+                                <tr class="row-1">
+                                    <td class="ingredient-column-item">Toasted sesame seeds</td>
+                                    <td>12g</td>
+                                </tr>
+                                <tr class="row-2">
+                                    <td class="ingredient-column-item">Red pickled ginger</td>
+                                    <td>40g</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </section>
+                <section class="recipestepsection">
+                    <h2>How to prepare it?</h2>
+                    <ol class="cooking-instructions-list">
+                        <li class="cooking-instructions-title">
+                            <span class="steptitle">Get those ingredients ready!</span>
+                            <ol>
+                                <li class="cookingstep">Peel the garlic cloves and crush with the flat part of a knife.</li>
+                                <li class="cookingstep">Place the garlic, soy sauce, mirin and sake in a small sauce pan. bring to a boil and then reduce and simmer for 10 minutes.</li>
+                            </ol>
+                        </li>
+                        <li class="cooking-instructions-title">
+                            <span class="steptitle">Let's cook!</span>
+                            <ol>
+                                <li class="cookingstep">Boil the noodles in water about 4 minutes. No salt needed.</li>
+                                <li class="cookingstep">Cook the mushrooms along side the noodles until they are soften.</li>
+                                <li class="cookingstep">Slightly fry the braised pork in a  on-tick pan until lightly browned.</li>
+                            </ol>
+                        </li>
+                        <li class="cooking-instructions-title">
+                            <span class="steptitle">Ready to eat!</span>
+                            <ol>
+                                <li class="cookingstep">Place 1/4 of the seasoning in the bottom of four bowls.</li>
+                                <li class="cookingstep">Pour about 125ml of broth into each bowl and stir to mix.</li>
+                                <li class="cookingstep">Add the noodles. Pour another 375ml of broth per bowl.</li>
+                                <li class="cookingstep">Top each bowl with one egg, about 2-3 braised pork slices, and about 20g of mushrooms.</li>
+                                <li class="cookingstep">Additionally, garnish with sesame seeds and scallions.</li>
+                                <li class="cookingstep">Enjoy!</li>
+                            </ol>
+                        </li>
                     </ol>
-                </li>
-            </ol>
-        </section>
-    </article>
-    <footer>
-        <a href="../index.html">Home</a>
-    </footer>
+                </section>
+            </article>
+        </main>
+        <footer>    
+            <a href="../index.html">HOME</a>
+             <a href="./chikuzenni.html">Chikuzen-ni</a>
+            <a href="./kashiwameshi.html">Kashiwa-meshi</a>
+        </footer>
+    </div>  
 </body>
 </html>
